# ftop-rust

./: .gitignore  Cargo.toml  README.md
src/: byteutils.rs  main.rs
src/console/: byteutils.rs  displayutils.rs  mod.rs  panicutils.rs
src/monitor/: cpu.rs  disk.rs  gpu.rs  mod.rs  network.rs  ram.rs  sensors.rs  system.rs
src/performance/: cpu.rs  disk.rs  gpu.rs  mem.rs  mod.rs  net.rs  sysos.rs
src/views/: byteutils.rs  displayutils.rs  mod.rs
