[package]
name = "ftop-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
psutil = "3.2.2"
indicatif = "0.17.4"
clap = { version = "4.3.0", features = ["derive"] }
owo-colors = "3.4.0"
nvml-wrapper = "0.9.0"
sysinfo = "0.29.0"
strum = "0.24.1"
strum_macros = "0.24.3"